# backend4omniai

./: .dockerignore  .env.example  .gitignore  AGENTS.md  DEPLOY.md  Dockerfile  README.md  docker-compose.yml  index.html  install_uv.ps1  login.html  main.py  ngrok.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  runbook.md  runtime-config.json  tsconfig.json  v1scope.md
backend/: .env.example  Dockerfile  README.md  __init__.py  alembic.ini  entrypoint.sh  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_routes.py
backend/agents/: __init__.py
backend/api/: __init__.py  admin.py  artifacts.py  auth.py  chat.py  context_blocks.py  diag.py  health.py  knowledge.py  media.py  memory.py  plan.py  projects.py  providers.py  tools.py  voice.py  workflows.py
backend/app/: __init__.py  main.py
backend/auth/: __init__.py  bootstrap.py  dependencies.py  login_limiter.py  password.py  session.py
backend/config/: __init__.py  settings.py
backend/core/: __init__.py  exceptions.py  logging.py  middleware.py  time.py
backend/db/: __init__.py  database.py  models.py
backend/migrations/: env.py  script.py.mako
backend/providers/: __init__.py  base.py  lmstudio.py  ollama.py  openai_compat.py  registry.py
backend/scripts/: create_admin.py  migrate_sqlite_to_postgres.py  run_migrations.py
backend/services/: __init__.py  audit_service.py  capabilities_service.py  chat_service.py  embeddings_service.py  retrieval_service.py  run_service.py  tool_capabilities_service.py  voice_service.py  workflow_service.py  workflow_templates.py
backend/tests/: __init__.py  conftest.py  test_admin_audit.py  test_auth.py  test_auth_refresh.py  (+20 more)
(+212 files in other folders)
